--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ aws-xray-sdk = "*"
 backoff = "*"
 dynamodb-tools = "*"
 python-ulid = "*"
+cfn-lambda-handler = "*"
 
 [requires]
 python_version = "3.9"
